--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "museum-paintings",
   "version": "1.0.0",
-  "description": "",
+  "description": "## How to use",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,14 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "connect-session-sequelize": "^7.0.4",
-    "dotenv": "^8.2.0",
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
-    "handlebars": "^4.7.6",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
-  }
+    "express-handlebars": "^5.3.5",
+    "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marisolbsmith/blogit.git"
+  },
+  "bugs": {
+    "url": "https://github.com/marisolbsmith/blogit/issues"
+  },
+  "homepage": "https://github.com/marisolbsmith/blogit#readme"
 }
